Thu Jan  3 14:34:50 HKT 2019
	Fix issues
	* plugins/uninit.cc: memory leak
	* pthread_create memory leak issues
	* plugins/utils.cc: gen_code_paths may take too long, ignore functions
	with more than FUNC_CP_MAX.
	* si_core.c: support argv list to execute commands automatically, to run with
	valgrind
Wed Jan  2 00:13:22 HKT 2019
	Fix issues
	* gen_code_paths may alloc too many memory, use clib_rw_pool

Fri Dec 28 10:49:10 HKT 2018
	add support for linux kernel(4.14.x)
	* collect/c.cc: collect files without any function
	* plugins/c.cc: fix BUGs when parsing linux kernel vmlinux resfile