@@ -1,3 +1,6 @@
+Tue Jan  8 19:14:36 HKT 2019
+	Fix issues
+	* plugins/uninit.cc: gen_code_paths may take too long for one path
 Thu Jan  3 14:34:50 HKT 2019
 	Fix issues
 	* plugins/uninit.cc: memory leak
